# CPP-PasswordManager

./: .gitignore  CMakeLists.txt  erro.md  plan.md  readme.md  rely.md
src/: gui.cpp  main.cpp
src/app/: app_state.cpp  app_state.hpp
src/core/: 2fa.cpp  2fa.hpp  crypto.cpp  crypto.hpp  password_input.cpp  password_input.hpp  security.cpp  security.hpp  storage.cpp  storage.hpp
src/ui/layout/: sidebar.cpp  sidebar.hpp
src/ui/pages/: add_entry_page.cpp  add_entry_page.hpp  dashboard_page.cpp  dashboard_page.hpp  login_page.cpp  login_page.hpp  totp_page.cpp  totp_page.hpp
src/ui/theme/: theme.cpp  theme.hpp
